--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1597,6 +1597,7 @@ img {
 }
 
 /* footer */
+
 .footer__top {
 	background-color: #f4ad39;
 
@@ -1617,28 +1618,26 @@ img {
 }
 
 .footer__title {
-	font-size: 26px;
+	font-size: 1.625rem;
+	/* 26px */
 
 	margin-bottom: 35px;
 }
-
-.info__list {
+.footer__info-list {
 	width: 165px;
 }
 
-.info__link {
+.footer__info-link {
 	font-size: 1.1rem;
 	line-height: 35px;
 	font-weight: 700;
 	letter-spacing: -0.02em;
 	color: #6d450c;
 }
-
-.footer__payment {
+.footer__pay {
 	margin-left: 152px;
 }
-
-.payment__box {
+.footer__pay-list {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -1647,12 +1646,9 @@ img {
 	width: 270px;
 }
 
-.payment__img {
+.footer__pay-img {
 	margin-right: 18px;
 	margin-bottom: 20px;
-}
-
-.payment__img {
 	height: 100%;
 }
 
@@ -1814,7 +1810,57 @@ img {
 	top: 40px;
 	right: 60px;
 }
+/* footer */
+@media only screen and (max-width: 1440px) {
+}
 
+@media only screen and (max-width: 992px) {
+}
+
+@media only screen and (max-width: 768px) {
+	.footer__top {
+		padding: 65px 106px 93px;
+	}
+
+	.footer__wrapper {
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+
+	.footer__logo {
+		margin: 0px 30px 80px 0px;
+	}
+	.footer__wrap {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 60px;
+	}
+	.footer__info {
+		margin-left: 0px;
+	}
+
+	.footer__title {
+		margin-bottom: 42px;
+	}
+
+	.footer__box {
+		margin: 0 90px 0 0px;
+	}
+
+	.footer__text {
+		margin-right: 23px;
+	}
+
+	.footer__link {
+		right: 30px;
+		bottom: 30px;
+	}
+}
+
+@media only screen and (max-width: 320px) {
+}
 /* создаем медиа запросы */
 
 /* @media only screen and (max-width : 1920px) {}
