--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -79,7 +79,7 @@ img {
 }
 
 .header {
-	background: no-repeat center/cover url(../images/header_bg.jpg);
+	background: no-repeat center/cover url(./images/header_bg.jpg);
 
 	z-index: -1;
 
