--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -1,5 +1,3 @@
-
-
 .menu__list {
 	display: flex;
 }
@@ -60,22 +58,25 @@
 .menu__link:active {
 	color: #223499;
 }
+@media only screen and (max-width: 1368px) {
+	
+	.menu__list {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
 
-.menu__list {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
+		height: 800px;
+	}
 
-	height: 800px;
-}
+	.menu__item + .menu__item {
+		margin-left: 0;
+	}
 
-.menu__item + .menu__item {
-	margin-left: 0;
-}
+	.menu__link {
+		font-size: 1.25rem;
+	}
 
-.menu__link {
-	font-size: 1.25rem;
 }
 @media only screen and (max-width: 360px) {
 	
